...
            "state" : "translated",
            "value" : "Toute la journée"
          }
        }
      }
    },
    "All notebooks" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Alle Notizbücher"
          }
...
            "state" : "translated",
            "value" : "Fermer la fenêtre de zoom"
          }
        }
      }
    },
    "Cloth" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Leinen"
          }
...
            "state" : "translated",
            "value" : "Crayon de cire"
          }
        }
      }
    },
    "Create" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Erstellen"
          }
...
            "state" : "translated",
            "value" : "Ne plus afficher"
          }
        }
      }
    },
    "Done" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fertig"
          }
...
            "value" : "Drucken"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Print"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Imprimir"
...
            "state" : "translated",
            "value" : "Bleu marine"
          }
        }
      }
    },
    "New" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Neu"
          }
...
            "state" : "translated",
            "value" : "Cette année"
          }
        }
      }
    },
    "Title" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Titel"
          }
...
